INCLUDE_DIRECTORIES(
  ${VLE_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS}
  ${Boost_INCLUDE_DIRS}
  ${GLADEMM_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS}
  ${LIBXMLPP_INCLUDE_DIRS}
  ${GTKMM_INCLUDE_DIRS}
  ${GTHREAD_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${GLIBMM_LIBRARY_DIRS}
  ${LIBXMLPP_LIBRARY_DIRS}
  ${GLADEMM_LIBRARY_DIRS}
  ${GTKMM_LIBRARY_DIRS}
  ${GTHREAD_INCLUDE_DIRS})

IF (WIN32)
  ADD_EXECUTABLE(eov WIN32 main.cpp OptionGroup.cpp OptionGroup.hpp)
ELSE (WIN32)
  ADD_EXECUTABLE(eov main.cpp OptionGroup.cpp OptionGroup.hpp)
ENDIF (WIN32)

SET_TARGET_PROPERTIES(eov PROPERTIES ${VLE_APP_PROPERTIES})

TARGET_LINK_LIBRARIES(eov
  ${GLIBMM_LIBRARIES}
  ${LIBXMLPP_LIBRARIES}
  ${GLADEMM_LIBRARIES}
  ${GTKMM_LIBRARIES}
  ${GTHREAD_LIBRARIES}
  ${OS_SPECIFIC_LIBRARIES}
  vlegeometry
  vleutils
  vledata
  vlevalue
  vlegraph
  vleoov
  vlevpz
  vledevs
  vleextension
  vlemanager
  vletranslator
  vleeov)

INSTALL(TARGETS eov DESTINATION bin)
INSTALL(FILES eov.1 DESTINATION ${VLE_MANPAGE_PATH})
