INCLUDE_DIRECTORIES(
  ${VLE_BINARY_DIR}/src
  ${VLE_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS}
  ${GLADEMM_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS}
  ${LIBXML_INCLUDE_DIRS}
  ${GTKMM_INCLUDE_DIRS}
  ${GTHREAD_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${GLIBMM_LIBRARY_DIRS}
  ${LIBXML_LIBRARY_DIRS}
  ${GLADEMM_LIBRARY_DIRS}
  ${GTKMM_LIBRARY_DIRS}
  ${GTHREAD_INCLUDE_DIRS})

IF (WIN32)
  ADD_EXECUTABLE(eov WIN32 main.cpp OptionGroup.cpp OptionGroup.hpp)
ELSE (WIN32)
  ADD_EXECUTABLE(eov main.cpp OptionGroup.cpp OptionGroup.hpp)
  SET_TARGET_PROPERTIES(eov PROPERTIES ${VLE_APP_PROPERTIES})
ENDIF (WIN32)

TARGET_LINK_LIBRARIES(eov
  ${GLIBMM_LIBRARIES}
  ${LIBXML_LIBRARIES}
  ${GLADEMM_LIBRARIES}
  ${GTKMM_LIBRARIES}
  ${GTHREAD_LIBRARIES}
  ${OS_SPECIFIC_LIBRARIES}
  vlegeometry
  vleutils
  vlevalue
  vlegraph
  vleoov
  vlevpz
  vledevs
  vleextension
  vlemanager
  vletranslator
  vleeov)

INSTALL(TARGETS eov DESTINATION bin)
INSTALL(FILES eov.1 DESTINATION ${VLE_MANPAGE_PATH})
