INCLUDE_DIRECTORIES(
  ${VLE_BINARY_DIR}/src
  ${VLE_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS}
  ${LIBXML_INCLUDE_DIRS}
  ${GTKMM_INCLUDE_DIRS}
  ${GTHREAD_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${GLIBMM_LIBRARY_DIRS}
  ${LIBXML_LIBRARY_DIRS}
  ${GTKMM_LIBRARY_DIRS}
  ${GTHREAD_INCLUDE_DIRS})

IF (WIN32)
  ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/eov.o
    COMMAND ${CMAKE_RC_COMPILER}
    -I${CMAKE_BINARY_DIR}/share
    -i${CMAKE_BINARY_DIR}/share/eov.rc
    -o${CMAKE_CURRENT_BINARY_DIR}/eov.o)
  ADD_EXECUTABLE(eov WIN32 main.cpp ${CMAKE_CURRENT_BINARY_DIR}/eov.o)
ELSE (WIN32)
  ADD_EXECUTABLE(eov main.cpp)
  SET_TARGET_PROPERTIES(eov PROPERTIES ${VLE_APP_PROPERTIES})
ENDIF (WIN32)

TARGET_LINK_LIBRARIES(eov
  ${GLIBMM_LIBRARIES}
  ${LIBXML_LIBRARIES}
  ${GTKMM_LIBRARIES}
  ${GTHREAD_LIBRARIES}
  ${OS_SPECIFIC_LIBRARIES}
  vleutils
  vlevalue
  vlegraph
  vleoov
  vlevpz
  vledevs
  vlemanager
  vletranslator
  vleeov)

INSTALL(TARGETS eov DESTINATION bin)
INSTALL(FILES eov.1 DESTINATION ${VLE_MANPAGE_PATH} RENAME
  eov-${VLE_VERSION_SHORT}.1)
