INCLUDE_DIRECTORIES(
  ${VLE_BINARY_DIR}/src
  ${VLE_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS}
  ${GLADEMM_INCLUDE_DIRS}
  ${GTKMM_INCLUDE_DIRS}
  ${LIBXML_INCLUDE_DIRS}
  ${GTHREAD_INCLUDE_DIRS}
  ${GTKSOURCEVIEWMM_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${LIBXML_LIBRARY_DIRS}
  ${GLADEMM_LIBRARY_DIRS}
  ${GTKMM_LIBRARY_DIRS}
  ${GTHREAD_INCLUDE_DIRS}
  ${GTKSOURCEVIEWMM_LIBRARY_DIRS})

IF (WIN32)
  ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/gvle.o
    COMMAND ${CMAKE_RC_COMPILER}
    -I${CMAKE_BINARY_DIR}/share
    -i${CMAKE_BINARY_DIR}/share/gvle.rc
    -o${CMAKE_CURRENT_BINARY_DIR}/gvle.o)

  ADD_EXECUTABLE(gvle WIN32 main.cpp ${CMAKE_CURRENT_BINARY_DIR}/gvle.o)
ELSE (WIN32)
  ADD_EXECUTABLE(gvle main.cpp)
  SET_TARGET_PROPERTIES(gvle PROPERTIES ${VLE_APP_PROPERTIES})
ENDIF (WIN32)

TARGET_LINK_LIBRARIES(gvle
  ${VLE_LIBRARIES}
  ${GLADEMM_LIBRARIES}
  ${GTKMM_LIBRARIES}
  ${GTHREAD_LIBRARIES}
  ${OS_SPECIFIC_LIBRARIES}
  ${GTKSOURCEVIEWMM_LIBRARIES}
  vleutils
  vlevalue
  vlegraph
  vleoov
  vlevpz
  vledevs
  vleextension
  vlemanager
  vletranslator
  vlegvle)

INSTALL(TARGETS gvle DESTINATION bin)
INSTALL(FILES gvle.1 DESTINATION ${VLE_MANPAGE_PATH} RENAME
  gvle-${VLE_VERSION_SHORT}.1)
