SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)

INCLUDE_DIRECTORIES(${VLE_BINARY_DIR}/src ${VLE_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS} ${VLEDEPS_INCLUDE_DIRS})
SET(V_LIB vlelib)
IF (WIN32)
  LINK_DIRECTORIES(${VLEDEPS_LIBRARY_DIRS} ${Boost_LIBRARY_DIRS})
ENDIF (WIN32)

#
# Add Intl/Gettext lib
#
IF (WIN32)
  SET(INTL_LIB "intl")
ELSE (WIN32)
  SET(INTL_LIB "")
ENDIF (WIN32)

INCLUDE_DIRECTORIES(${VLE_BINARY_DIR}/src ${VLE_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS} ${VLEDEPS_INCLUDE_DIRS})

LINK_DIRECTORIES(${VLEDEPS_LIBRARY_DIRS} ${Boost_LIBRARY_DIRS})

SET(GVLE2_SOURCE_DIR ${VLE_SOURCE_DIR}/src/vle/gvle)

IF (WIN32)
  ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/gvle.o
    COMMAND ${CMAKE_RC_COMPILER}
    -I${CMAKE_BINARY_DIR}/share
    -i${CMAKE_BINARY_DIR}/share/gvle.rc
    -o${CMAKE_CURRENT_BINARY_DIR}/gvle.o)
  ADD_EXECUTABLE(gvle WIN32 main.cpp ${gvle_RES}
    ${CMAKE_CURRENT_BINARY_DIR}/gvle.o)

  SET_TARGET_PROPERTIES(gvle PROPERTIES
    COMPILE_FLAGS "-fvisibility=hidden -fvisibility-inlines-hidden")

ELSE (WIN32)
  ADD_EXECUTABLE(gvle WIN32 main.cpp ${gvle_RES})

  SET_TARGET_PROPERTIES(gvle PROPERTIES
    SOVERSION "${VLE_MAJOR}.${VLE_MINOR}"
    VERSION "${VLE_MAJOR}.${VLE_MINOR}"
    COMPILE_FLAGS "-fvisibility=hidden -fvisibility-inlines-hidden")
ENDIF (WIN32)

TARGET_LINK_LIBRARIES(gvle gvlelib vlelib ${VLEDEPS_LIBRARIES}
  ${Boost_LIBRARIES} ${OS_SPECIFIC_LIBRARIES})

INSTALL(TARGETS gvle DESTINATION bin)
