SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)

SET(QT_USE_QTXML TRUE)

FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})

FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(XMLDEPS libxml-2.0)
INCLUDE_DIRECTORIES(${XMLDEPS_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(${VLE_BINARY_DIR}/src ${VLE_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS} ${VLEDEPS_INCLUDE_DIRS})
SET(V_LIB vlelib)
IF (WIN32)
  LINK_DIRECTORIES(${VLEDEPS_LIBRARY_DIRS} ${Boost_LIBRARY_DIRS})
ENDIF (WIN32)

#
# Add Intl/Gettext lib
#
IF (WIN32)
  SET(INTL_LIB "intl")
ELSE (WIN32)
  SET(INTL_LIB "")
ENDIF (WIN32)

INCLUDE_DIRECTORIES(${VLE_BINARY_DIR}/src ${VLE_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS} ${VLEDEPS_INCLUDE_DIRS})

LINK_DIRECTORIES(${VLEDEPS_LIBRARY_DIRS} ${Boost_LIBRARY_DIRS})

SET(GVLE2_SOURCE_DIR ${VLE_SOURCE_DIR}/src/vle/gvle2)

QT4_ADD_RESOURCES(gvle2_RES gvle2.qrc)

IF (WIN32)
  ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/gvle2.o
    COMMAND ${CMAKE_RC_COMPILER}
    -I${CMAKE_BINARY_DIR}/share
    -i${CMAKE_BINARY_DIR}/share/gvle.rc
    -o${CMAKE_CURRENT_BINARY_DIR}/gvle2.o)
  ADD_EXECUTABLE(gvle2 WIN32 main.cpp ${gvle2_RES}
    ${CMAKE_CURRENT_BINARY_DIR}/gvle2.o)

  SET_TARGET_PROPERTIES(gvle PROPERTIES
    COMPILE_FLAGS "-fvisibility=hidden -fvisibility-inlines-hidden")

ELSE (WIN32)
  ADD_EXECUTABLE(gvle2 WIN32 main.cpp ${gvle2_RES})

  SET_TARGET_PROPERTIES(gvle2 PROPERTIES
    SOVERSION "${VLE_MAJOR}.${VLE_MINOR}"
    VERSION "${VLE_MAJOR}.${VLE_MINOR}"
    COMPILE_FLAGS "-fvisibility=hidden -fvisibility-inlines-hidden")
ENDIF (WIN32)

TARGET_LINK_LIBRARIES(gvle2 gvle2lib vlelib ${VLEDEPS_LIBRARIES}
  ${Boost_LIBRARIES} ${OS_SPECIFIC_LIBRARIES})

INSTALL(TARGETS gvle2 DESTINATION bin)

INSTALL(FILES "transalations/tr_en.qm" DESTINATION
  "${VLE_SHARE_DIRS}/translations" RENAME "gvle2_en_US.qm")
INSTALL(FILES "transalations/tr_fr.qm" DESTINATION
  "${VLE_SHARE_DIRS}/translations" RENAME "gvle2_fr_FR.qm")
INSTALL(FILES "help/gvle2_app.qch" DESTINATION
  "${VLE_SHARE_DIRS}/man" RENAME "gvle2_app.qch")
INSTALL(FILES "help/gvle2.qhc" DESTINATION
  "${VLE_SHARE_DIRS}/man" RENAME "gvle2.qhc")
