INCLUDE_DIRECTORIES(
  ${VLE_BINARY_DIR}/src
  ${VLE_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS}
  ${LIBXML_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${GLIBMM_LIBRARY_DIRS}
  ${LIBXML_LIBRARY_DIRS})

IF (WIN32)
  ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/oov.o
    COMMAND ${CMAKE_RC_COMPILER}
    -I${CMAKE_BINARY_DIR}/share
    -i${CMAKE_BINARY_DIR}/share/oov.rc
    -o${CMAKE_CURRENT_BINARY_DIR}/oov.o)

  ADD_EXECUTABLE(oov main.cpp OptionGroup.cpp OptionGroup.hpp
    ${CMAKE_CURRENT_BINARY_DIR}/oov.o)
ELSE (WIN32)
  ADD_EXECUTABLE(oov main.cpp OptionGroup.cpp OptionGroup.hpp)
  SET_TARGET_PROPERTIES(oov PROPERTIES ${VLE_APP_PROPERTIES})
ENDIF (WIN32)

TARGET_LINK_LIBRARIES(oov
  ${GLIBMM_LIBRARIES}
  ${LIBXML_LIBRARIES}
  ${GTHREAD_LIBRARIES}
  vlegeometry
  vleutils
  vlevalue
  vlegraph
  vleoov
  vlevpz
  vledevs
  vleextension
  vlemanager
  vletranslator)

INSTALL(TARGETS oov DESTINATION bin)
INSTALL(FILES oov.1 DESTINATION ${VLE_MANPAGE_PATH} RENAME
  oov-${VLE_VERSION_SHORT}.1)
